[gd_scene load_steps=8 format=3 uid="uid://bha125vd4bao2"]

[ext_resource type="Script" path="res://Scripts/third_boss.gd" id="1_pwk8v"]
[ext_resource type="PackedScene" uid="uid://dyux3oh0sotah" path="res://card_deck/deck.tscn" id="2_0hhr8"]
[ext_resource type="PackedScene" uid="uid://c71lhcqy8hqru" path="res://player/player.tscn" id="3_as2wm"]
[ext_resource type="PackedScene" uid="uid://c63m8tfiigc3" path="res://Scenes/HUD.tscn" id="4_yjrwr"]
[ext_resource type="PackedScene" uid="uid://1tukfv0nnmly" path="res://Scenes/Abilities.tscn" id="5_mq04r"]
[ext_resource type="PackedScene" uid="uid://dpifh77h8jhn3" path="res://Scenes/dealer.tscn" id="6_dw3a8"]
[ext_resource type="Script" path="res://Scripts/mute.gd" id="7_f643p"]

[node name="ThirdBoss" type="Node2D"]
script = ExtResource("1_pwk8v")

[node name="Deck" parent="." instance=ExtResource("2_0hhr8")]

[node name="Player" parent="." instance=ExtResource("3_as2wm")]
position = Vector2(537, 254)

[node name="HUD" parent="." instance=ExtResource("4_yjrwr")]

[node name="AbilityManager" parent="." instance=ExtResource("5_mq04r")]

[node name="Dealer" parent="." instance=ExtResource("6_dw3a8")]
script = ExtResource("7_f643p")

[connection signal="round_over_main" from="." to="." method="_on_round_over_main"]
